[project]
name = "hide-and-seek"
version = "0.1.0"
description = ""
authors = [
    {name = "El Kaplan",email = "3373930+ejkaplan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
